# factorio-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  main.py  py_neutron_capture.ipynb  py_neutron_capture_sim.py  pyproject.toml  run_test.sh  test_main.py
.github/workflows/: python-app.yml
