[project]
name = "factorio-tools"
version = "0.1.0"
description = "My Tools for Factorio/Pyanodons"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "scipy>=1.18.0",
    "simpy>=4.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "jupyter>=1.1.1",
    "scipy>=1.10.1",
    "numpy>=1.25.2",
    "pytest>=9.1.1",
    "pre-commit>=4.6.0",
]
